--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,10 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+body{
+  background: white;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
